--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "loli-docs",
-  "version": "1.0.0",
-  "description": "Documentation for Loli Feature Flags",
-  "license": "MIT",
+  "name": "loli-feature-flags-website",
   "type": "module",
-  "scripts": {
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs",
-    "docs:update-package": "npx vp-update"
-  },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.7",
-    "@vuepress/plugin-seo": "^2.0.0-rc.37",
-    "@vuepress/plugin-sitemap": "^2.0.0-rc.37",
-    "@vuepress/theme-default": "^2.0.0-rc.11",
-    "vue": "^3.4.0",
-    "vuepress": "^2.0.0-rc.7",
-    "vuepress-plugin-search-pro": "^2.0.0-rc.50"
+    "@types/bun": "latest",
+    "vitepress": "^1.3.1"
   },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "4.6.1",
-    "@rollup/rollup-linux-x64-musl": "4.6.1"
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   }
 }
